# misa-framework

./: README.md  config.toml
src/misaxx-analyzer/: CMakeLists.txt  README.md
src/misaxx-analyzer/cmake/: misaxx-analyzer-config.cmake.in
src/misaxx-analyzer/doc/: Doxyfile
src/misaxx-analyzer/include/misaxx-analyzer/: module.h  module_info.h  module_interface.h
src/misaxx-analyzer/include/misaxx-analyzer/accessors/: attachment_index.h  misa_output.h
src/misaxx-analyzer/include/misaxx-analyzer/caches/: attachment_index_cache.h  misa_output_cache.h
src/misaxx-analyzer/include/misaxx-analyzer/descriptions/: attachment_index_description.h  misa_output_description.h
src/misaxx-analyzer/include/misaxx-analyzer/patterns/: attachment_index_pattern.h  misa_output_pattern.h
src/misaxx-analyzer/src/: main.cpp
src/misaxx-analyzer/src/misaxx-analyzer/: attachment_indexer_task.cpp  attachment_indexer_task.h  module.cpp  module_info.cpp  module_interface.cpp  schema_traversion_task.cpp  schema_traversion_task.h
src/misaxx-analyzer/src/misaxx-analyzer/accessors/: attachment_index.cpp  misa_output.cpp
src/misaxx-analyzer/src/misaxx-analyzer/caches/: attachment_index_cache.cpp  misa_output_cache.cpp
src/misaxx-analyzer/src/misaxx-analyzer/descriptions/: attachment_index_description.cpp  misa_output_description.cpp
src/misaxx-analyzer/src/misaxx-analyzer/patterns/: attachment_index_pattern.cpp  misa_output_pattern.cpp
src/misaxx-core/: CMakeLists.txt  LICENSE  README.md
src/misaxx-core/cmake/: misaxx-core-config.cmake.in  misaxx-module-template.cmake
src/misaxx-core/doc/: Doxyfile
src/misaxx-core/include/misaxx/core/: misa_cache.h  misa_cached_data.h  misa_cached_data_base.h  misa_data_description.h  misa_data_pattern.h  misa_default_cache.h  misa_default_description_accessors.h  misa_description_storage.h  misa_dispatch_blueprint.h  misa_dispatcher.h  misa_dispatcher_blueprint_list.h  misa_dispatcher_builder.h  misa_json_schema_property.h  misa_manual_cache.h  misa_module.h  misa_module_base.h  misa_module_info.h  misa_module_interface.h  misa_parameter.h  misa_parameter_base.h  misa_parameter_builder.h  misa_primitive.h  misa_root_module.h  misa_root_module_base.h  misa_serializable.h  misa_serialization_id.h  misa_task.h  misa_worker.h  module_info.h
src/misaxx-core/src/misaxx/core/: misa_cache.cpp  misa_cached_data.cpp  misa_cached_data_base.cpp  misa_data_description.cpp  misa_data_pattern.cpp  misa_description_storage.cpp  misa_dispatch_blueprint.cpp  misa_dispatcher.cpp  misa_dispatcher_blueprint_list.cpp  misa_dispatcher_builder.cpp  misa_json_schema_property.cpp  misa_module.cpp  misa_module_info.cpp  misa_module_interface.cpp  misa_parameter_base.cpp  misa_parameter_builder.cpp  misa_root_module.cpp  misa_root_module_base.cpp  misa_serializable.cpp  misa_serialization_id.cpp  misa_task.cpp  misa_worker.cpp  module_info.cpp
src/misaxx-deconvolve/: CMakeLists.txt  README.md
src/misaxx-deconvolve/include/misaxx-deconvolve/: module.h  module_info.h  module_interface.h
src/misaxx-deconvolve/src/: main.cpp
src/misaxx-deconvolve/src/misaxx-deconvolve/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-deconvolve/src/misaxx-deconvolve/algorithms/: convolve_task.cpp  convolve_task.h  deconvolve_task.cpp  deconvolve_task.h
src/misaxx-imaging/: CMakeLists.txt  README.md
src/misaxx-imaging/cmake/: misaxx-imaging-config.cmake.in
src/misaxx-imaging/doc/: Doxyfile
src/misaxx-imaging/include/misaxx/imaging/: module_info.h
src/misaxx-imaging/src/misaxx/imaging/: module_info.cpp
src/misaxx-kidney-glomeruli/: CMakeLists.txt  README.md
src/misaxx-kidney-glomeruli/cmake/: misaxx-kidney-glomeruli-segmentation-config.cmake.in
src/misaxx-kidney-glomeruli/doc/: Doxyfile
src/misaxx-kidney-glomeruli/include/misaxx-kidney-glomeruli/: module.h  module_info.h  module_interface.h
src/misaxx-kidney-glomeruli/include/misaxx-kidney-glomeruli/attachments/: glomeruli.h  glomerulus.h
src/misaxx-kidney-glomeruli/src/: main.cpp
src/misaxx-kidney-glomeruli/src/misaxx-kidney-glomeruli/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-kidney-glomeruli/src/misaxx-kidney-glomeruli/attachments/: glomeruli.cpp  glomerulus.cpp
src/misaxx-microbench/: CMakeLists.txt  README.md
src/misaxx-microbench/cmake/: misaxx-microbench-config.cmake.in
src/misaxx-microbench/include/misaxx-microbench/: module.h  module_info.h  module_interface.h
src/misaxx-microbench/include/misaxx-microbench/attachments/: microbench_runtimes.h
src/misaxx-microbench/src/: main.cpp
src/misaxx-microbench/src/misaxx-microbench/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-microbench/src/misaxx-microbench/algorithms/: microbench_task.cpp  microbench_task.h
src/misaxx-ome/: CMakeLists.txt  README.md
src/misaxx-ome-visualizer/: CMakeLists.txt  README.md
src/misaxx-ome-visualizer/cmake/: misaxx-ome-visualizer-config.cmake.in
src/misaxx-ome-visualizer/doc/: Doxyfile
src/misaxx-ome-visualizer/include/misaxx-ome-visualizer/: module.h  module_info.h  module_interface.h
src/misaxx-ome-visualizer/src/: main.cpp
src/misaxx-ome-visualizer/src/misaxx-ome-visualizer/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-ome/cmake/: misaxx-imaging-ome-config.cmake.in
src/misaxx-ome/doc/: Doxyfile
src/misaxx-segment-cells/: CMakeLists.txt  README.md
src/misaxx-segment-cells/cmake/: misaxx-segment-cells-config.cmake.in
src/misaxx-segment-cells/include/misaxx-segment-cells/: module.h  module_info.h  module_interface.h
src/misaxx-segment-cells/src/: main.cpp
src/misaxx-segment-cells/src/misaxx-segment-cells/: module.cpp  module_info.cpp  module_interface.cpp
src/misaxx-tissue/: CMakeLists.txt  README.md
src/misaxx-tissue/cmake/: misaxx-tissue-segmentation-config.cmake.in
src/misaxx-tissue/doc/: Doxyfile
src/misaxx-tissue/include/misaxx-tissue/: module.h  module_info.h  module_interface.h
src/misaxx-tissue/src/: main.cpp
src/misaxx-tissue/src/misaxx-tissue/: module.cpp  module_info.cpp  module_interface.cpp
(+4148 files in other folders)
